@@ -30,7 +30,27 @@
             <summary>
             </summary>
             <bugs>
-                <bug id="1499" tool="jira">
+				<bug id="1500" tool="jira">
+                    <description>
+		                Fixed problem with including all required class files in XML JAR.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Christian Zuckschwerdt</name>
+                        <email>zany_jira@triq.net</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>ALL</module>
+                    <date>20060818</date>
+                </bug>
+				<bug id="1499" tool="jira">
                     <description>
 		                Added support for named queries at the &lt;class&gt; level.
                     </description>
